fixed padding on mobile breakpoint.

--- a/src/Screens/Contact/Contact.css
+++ b/src/Screens/Contact/Contact.css
@@ -66,6 +66,7 @@
 
 @media screen 
   and (max-width: 768px) {
+    
     .contact-container{
     display: inline-block;
     text-align: left;
@@ -95,6 +96,7 @@
       /* margin-top: 40px; */
       margin-left: 10px;
       margin-bottom: 0;
+      padding-left: 10px;
     }
 
     .contact-info{
@@ -106,6 +108,7 @@
       margin-left: 10px;
       margin-bottom: 0;
       font-size: 8px;
+      padding-left: 20px;
     }
 
     .contact-info-email{
@@ -118,6 +121,7 @@
       margin-bottom: 0;
       font-size: 8px;
       width: 115px;
+      padding-left: 20px;
     }
 
     .contact-div-bottom{
